--- a/robocza/Data/Data.csproj
+++ b/robocza/Data/Data.csproj
@@ -71,14 +71,20 @@
     <Compile Include="Migrations\201603151703224_secondInit.Designer.cs">
       <DependentUpon>201603151703224_secondInit.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201603191719208_3.cs" />
+    <Compile Include="Migrations\201603191719208_3.Designer.cs">
+      <DependentUpon>201603191719208_3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Autobus.cs" />
     <Compile Include="Models\BusStop.cs" />
     <Compile Include="Models\Role.cs" />
     <Compile Include="Models\Track.cs" />
-    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\ApiUser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\DatabaseService.cs" />
+    <Compile Include="Service\IDatabaseService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -91,7 +97,11 @@
     <EmbeddedResource Include="Migrations\201603151703224_secondInit.resx">
       <DependentUpon>201603151703224_secondInit.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603191719208_3.resx">
+      <DependentUpon>201603191719208_3.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
