--- a/robocza/WebApiServer/packages.config
+++ b/robocza/WebApiServer/packages.config
@@ -1,11 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AspNetWebApi.SelfHost" version="4.0.20710.0" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.SelfHost" version="4.0.20710.0" targetFramework="net452" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net452" />
-  <package id="NLog" version="4.2.3" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="2.0.2" targetFramework="net452" />
+  <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="SimpleInjector" version="3.1.2" targetFramework="net452" />
+  <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="3.1.2" targetFramework="net452" />
+  <package id="SimpleInjector.Integration.WebApi" version="3.1.2" targetFramework="net452" />
 </packages>
