--- a/robocza/WebSocketServer/packages.config
+++ b/robocza/WebSocketServer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NLog" version="4.2.3" targetFramework="net452" />
+  <package id="Fleck" version="0.13.0.57" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="SimpleInjector" version="3.1.2" targetFramework="net452" />
 </packages>
