--- a/robocza/Core/Core.csproj
+++ b/robocza/Core/Core.csproj
@@ -45,12 +45,15 @@
     <Compile Include="Logger\LogType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transfer\Attributes\MessageAttribute.cs" />
+    <Compile Include="Transfer\Authhandler\AuthDto.cs" />
     <Compile Include="Transfer\Base\EmptyDto.cs" />
     <Compile Include="Transfer\BusStopHandler\BusStopActivityDto.cs" />
     <Compile Include="Transfer\BusStopHandler\BusStopResultDto.cs" />
-    <Compile Include="Transfer\EventEmitterHandler\RegisterForEmitDto.cs" />
-    <Compile Include="Transfer\EventEmitterHandler\UnregisterForEmitDto.cs" />
     <Compile Include="Transfer\TestTransfer\TestObj.cs" />
+    <Compile Include="Transfer\User\UserDto.cs" />
+    <Compile Include="Transfer\User\UserLoginDto.cs" />
+    <Compile Include="Transfer\User\UserResultDto.cs" />
+    <Compile Include="Transfer\User\UserSelfCreateDto.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Session\" />
