--- a/robocza/Core/Core.csproj
+++ b/robocza/Core/Core.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Transfer\Base\EmptyDto.cs" />
     <Compile Include="Transfer\BusStopHandler\BusStopActivityDto.cs" />
     <Compile Include="Transfer\BusStopHandler\BusStopResultDto.cs" />
+    <Compile Include="Transfer\Emit\EventDto.cs" />
     <Compile Include="Transfer\TestTransfer\TestObj.cs" />
     <Compile Include="Transfer\User\UserDto.cs" />
     <Compile Include="Transfer\User\UserLoginDto.cs" />
