--- a/robocza/Core/Core.csproj
+++ b/robocza/Core/Core.csproj
@@ -49,6 +49,8 @@
     <Compile Include="Transfer\Base\EmptyDto.cs" />
     <Compile Include="Transfer\BusStopHandler\BusStopActivityDto.cs" />
     <Compile Include="Transfer\BusStopHandler\BusStopResultDto.cs" />
+    <Compile Include="Transfer\Bus\BusDto.cs" />
+    <Compile Include="Transfer\Bus\GetBusDto.cs" />
     <Compile Include="Transfer\TestTransfer\TestObj.cs" />
     <Compile Include="Transfer\User\UserDto.cs" />
     <Compile Include="Transfer\User\UserLoginDto.cs" />
@@ -57,6 +59,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Session\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Data\Data.csproj">
+      <Project>{C19A71F2-2601-4E65-9C5C-4E00C364AB30}</Project>
+      <Name>Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
