--- a/robocza/Data/Data.csproj
+++ b/robocza/Data/Data.csproj
@@ -65,33 +65,9 @@
     <Compile Include="Enums\BusType.cs" />
     <Compile Include="Enums\UserRank.cs" />
     <Compile Include="MainDbContext.cs" />
-    <Compile Include="Migrations\201603151656060_init.cs" />
-    <Compile Include="Migrations\201603151656060_init.Designer.cs">
-      <DependentUpon>201603151656060_init.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201603151703224_secondInit.cs" />
-    <Compile Include="Migrations\201603151703224_secondInit.Designer.cs">
-      <DependentUpon>201603151703224_secondInit.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201603191719208_3.cs" />
-    <Compile Include="Migrations\201603191719208_3.Designer.cs">
-      <DependentUpon>201603191719208_3.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201603272140386_changes.cs" />
-    <Compile Include="Migrations\201603272140386_changes.Designer.cs">
-      <DependentUpon>201603272140386_changes.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201604011820190_addToken.cs" />
-    <Compile Include="Migrations\201604011820190_addToken.Designer.cs">
-      <DependentUpon>201604011820190_addToken.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201604020907571_busDriver.cs" />
-    <Compile Include="Migrations\201604020907571_busDriver.Designer.cs">
-      <DependentUpon>201604020907571_busDriver.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201604020944148_someChanges.cs" />
-    <Compile Include="Migrations\201604020944148_someChanges.Designer.cs">
-      <DependentUpon>201604020944148_someChanges.cs</DependentUpon>
+    <Compile Include="Migrations\201604022104055_initial.cs" />
+    <Compile Include="Migrations\201604022104055_initial.Designer.cs">
+      <DependentUpon>201604022104055_initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Activity.cs" />
@@ -111,30 +87,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201603151656060_init.resx">
-      <DependentUpon>201603151656060_init.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201603151703224_secondInit.resx">
-      <DependentUpon>201603151703224_secondInit.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201603191719208_3.resx">
-      <DependentUpon>201603191719208_3.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201603272140386_changes.resx">
-      <DependentUpon>201603272140386_changes.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201604011820190_addToken.resx">
-      <DependentUpon>201604011820190_addToken.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201604020907571_busDriver.resx">
-      <DependentUpon>201604020907571_busDriver.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201604020944148_someChanges.resx">
-      <DependentUpon>201604020944148_someChanges.cs</DependentUpon>
-    </EmbeddedResource>
+    <Folder Include="Expressions\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Expressions\" />
+    <EmbeddedResource Include="Migrations\201604022104055_initial.resx">
+      <DependentUpon>201604022104055_initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
