--- a/robocza/Data/Data.csproj
+++ b/robocza/Data/Data.csproj
@@ -65,9 +65,9 @@
     <Compile Include="Enums\BusType.cs" />
     <Compile Include="Enums\UserRank.cs" />
     <Compile Include="MainDbContext.cs" />
-    <Compile Include="Migrations\201604022118086_initial.cs" />
-    <Compile Include="Migrations\201604022118086_initial.Designer.cs">
-      <DependentUpon>201604022118086_initial.cs</DependentUpon>
+    <Compile Include="Migrations\201604030319029_test.cs" />
+    <Compile Include="Migrations\201604030319029_test.Designer.cs">
+      <DependentUpon>201604030319029_test.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Activity.cs" />
@@ -90,8 +90,8 @@
     <Folder Include="Expressions\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201604022118086_initial.resx">
-      <DependentUpon>201604022118086_initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201604030319029_test.resx">
+      <DependentUpon>201604030319029_test.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
