--- a/app/bower.json
+++ b/app/bower.json
@@ -32,7 +32,8 @@
     "angular": "^1.5.3",
     "angular-responsive-tables": "^0.1.3",
     "responsive-tables-js": "^1.0.6",
-    "Ionicons": "ionicons#^2.0.1"
+    "Ionicons": "ionicons#^2.0.1",
+    "ngmap": "^1.17.3"
   },
   "dependencies": {
     "imagesloaded": "latest",
