--- a/robocza/Data/Data.csproj
+++ b/robocza/Data/Data.csproj
@@ -66,24 +66,16 @@
     <Compile Include="Enums\Status.cs" />
     <Compile Include="Enums\UserRank.cs" />
     <Compile Include="MainDbContext.cs" />
-    <Compile Include="Migrations\201604030319029_test.cs" />
-    <Compile Include="Migrations\201604030319029_test.Designer.cs">
-      <DependentUpon>201604030319029_test.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201604151338169_AddStatus.cs" />
-    <Compile Include="Migrations\201604151338169_AddStatus.Designer.cs">
-      <DependentUpon>201604151338169_AddStatus.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201604151350363_StatusFix.cs" />
-    <Compile Include="Migrations\201604151350363_StatusFix.Designer.cs">
-      <DependentUpon>201604151350363_StatusFix.cs</DependentUpon>
+    <Compile Include="Migrations\201604161232304_initial.cs" />
+    <Compile Include="Migrations\201604161232304_initial.Designer.cs">
+      <DependentUpon>201604161232304_initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Activity.cs" />
     <Compile Include="Models\Autobus.cs" />
     <Compile Include="Models\BusStop.cs" />
     <Compile Include="Models\Course.cs" />
-    <Compile Include="Models\RegisterTokens.cs" />
+    <Compile Include="Models\RegisterToken.cs" />
     <Compile Include="Models\Track.cs" />
     <Compile Include="Models\ApiUser.cs" />
     <Compile Include="Program.cs" />
@@ -99,14 +91,8 @@
     <Folder Include="Expressions\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201604030319029_test.resx">
-      <DependentUpon>201604030319029_test.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201604151338169_AddStatus.resx">
-      <DependentUpon>201604151338169_AddStatus.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201604151350363_StatusFix.resx">
-      <DependentUpon>201604151350363_StatusFix.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201604161232304_initial.resx">
+      <DependentUpon>201604161232304_initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
