--- a/robocza/WebApiServer/packages.config
+++ b/robocza/WebApiServer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr4.StringTemplate" version="4.0.6.9004" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.identity.Core" version="2.2.1" targetFramework="net452" />
@@ -16,7 +17,8 @@
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
+  <package id="Newtonsoft.Json.Schema" version="2.0.2" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Sendgrid" version="6.3.4" targetFramework="net452" />
   <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net452" />
