Subskrybcja na eventy, przykładowe wykorzystanie

--- a/robocza/Core/Core.csproj
+++ b/robocza/Core/Core.csproj
@@ -59,6 +59,8 @@
     <Compile Include="Transfer\Bus\GetBusDto.cs" />
     <Compile Include="Transfer\CourseController\CourseDto.cs" />
     <Compile Include="Transfer\Emit\EventDto.cs" />
+    <Compile Include="Transfer\SubscribeHandler\SubscribeDto.cs" />
+    <Compile Include="Transfer\SubscribeHandler\UnSubscribeDto.cs" />
     <Compile Include="Transfer\TestTransfer\TestObj.cs" />
     <Compile Include="Transfer\TrackController\TrackDetailsDto.cs" />
     <Compile Include="Transfer\TrackController\TrackDto.cs" />
