--- a/robocza/Core/Core.csproj
+++ b/robocza/Core/Core.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\EnsureElements.cs" />
+    <Compile Include="Helpers\ValidationHelper.cs" />
     <Compile Include="Logger\ILogger.cs" />
     <Compile Include="Logger\ConsoleLogger.cs" />
     <Compile Include="Logger\LogType.cs" />
