--- a/robocza/Data/Data.csproj
+++ b/robocza/Data/Data.csproj
@@ -60,11 +60,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enums\ActivityType.cs" />
-    <Compile Include="Enums\BusStopType.cs" />
-    <Compile Include="Enums\BusType.cs" />
-    <Compile Include="Enums\Status.cs" />
-    <Compile Include="Enums\UserRank.cs" />
     <Compile Include="MainDbContext.cs" />
     <Compile Include="Migrations\201604161232304_initial.cs" />
     <Compile Include="Migrations\201604161232304_initial.Designer.cs">
@@ -73,6 +68,10 @@
     <Compile Include="Migrations\201605081219000_trackChange.cs" />
     <Compile Include="Migrations\201605081219000_trackChange.Designer.cs">
       <DependentUpon>201605081219000_trackChange.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201605221725453_minorchanges.cs" />
+    <Compile Include="Migrations\201605221725453_minorchanges.Designer.cs">
+      <DependentUpon>201605221725453_minorchanges.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Activity.cs" />
@@ -92,6 +91,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Enums\" />
     <Folder Include="Expressions\" />
   </ItemGroup>
   <ItemGroup>
@@ -101,6 +101,15 @@
     <EmbeddedResource Include="Migrations\201605081219000_trackChange.resx">
       <DependentUpon>201605081219000_trackChange.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201605221725453_minorchanges.resx">
+      <DependentUpon>201605221725453_minorchanges.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{2218a6d4-47a9-4026-a271-f44aa971dd7b}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
