--- a/robocza/WebSocketServer/WebSocketServer.csproj
+++ b/robocza/WebSocketServer/WebSocketServer.csproj
@@ -72,6 +72,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Activity\ActivityHelper.cs" />
+    <Compile Include="Activity\ActivityResolverProvider.cs" />
+    <Compile Include="Activity\IActivityResolver.cs" />
+    <Compile Include="Activity\IActivityResolverProvider.cs" />
+    <Compile Include="Activity\Resolvers\ActivityResolveBurStartCourse.cs" />
+    <Compile Include="Activity\Resolvers\ActivityResolveBusEndCourse.cs" />
+    <Compile Include="Activity\Resolvers\ActivityResolveBusMove.cs" />
+    <Compile Include="Activity\Resolvers\ActivityResolveBusTicketCount.cs" />
     <Compile Include="Connection\Connection.cs" />
     <Compile Include="Connection\ConnectionHolder.cs" />
     <Compile Include="Connection\IConnection.cs" />
@@ -79,9 +87,9 @@
     <Compile Include="Connection\WSState.cs" />
     <Compile Include="Events\EmitMsg.cs" />
     <Compile Include="Events\EventEmitter.cs" />
-    <Compile Include="Events\EventType.cs" />
     <Compile Include="Events\IEmitMsg.cs" />
     <Compile Include="Events\IEventEmitter.cs" />
+    <Compile Include="Handlers\Action\ActivityHandler.cs" />
     <Compile Include="Handlers\Action\AuthHandler.cs" />
     <Compile Include="Handlers\Action\BusStopHandler.cs" />
     <Compile Include="Handlers\Action\SubscribeHandler.cs" />
