--- a/robocza/WebSocketServer/WebSocketServer.csproj
+++ b/robocza/WebSocketServer/WebSocketServer.csproj
@@ -78,7 +78,7 @@
     <Compile Include="Activity\IActivityResolverProvider.cs" />
     <Compile Include="Activity\Resolvers\ActivityResolveBurStartCourse.cs" />
     <Compile Include="Activity\Resolvers\ActivityResolveBusEndCourse.cs" />
-    <Compile Include="Activity\Resolvers\ActivityResolveBusMove.cs" />
+    <Compile Include="Activity\Resolvers\ActivityResolveBusStopCheck.cs" />
     <Compile Include="Activity\Resolvers\ActivityResolveBusTicketCount.cs" />
     <Compile Include="Activity\Resolvers\ActivityResolverBusControl.cs" />
     <Compile Include="Connection\Connection.cs" />
