--- a/robocza/Data/App.config
+++ b/robocza/Data/App.config
@@ -13,4 +13,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="DefaultConnectionEntities" connectionString="metadata=res://*/ModelGraph.DatabaseModel.csdl|res://*/ModelGraph.DatabaseModel.ssdl|res://*/ModelGraph.DatabaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=DefaultConnection;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
