--- a/robocza/DataTests/DataTests.csproj
+++ b/robocza/DataTests/DataTests.csproj
@@ -63,25 +63,39 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="ControllersTests\BusControllerTest.cs" />
+    <Compile Include="Controllers\BusControllerTests.cs" />
+    <Compile Include="ConvertersTests\ConvertersTests.cs" />
+    <Compile Include="Converters\BusExpressionsTests.cs" />
     <Compile Include="MainDbContexTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\SessionServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{2218A6D4-47A9-4026-A271-F44AA971DD7B}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Data\Data.csproj">
       <Project>{C19A71F2-2601-4E65-9C5C-4E00C364AB30}</Project>
       <Name>Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WebApiServer\WebApiServer.csproj">
+      <Project>{7D82DFB1-7651-4282-872B-01CFA825B616}</Project>
+      <Name>WebApiServer</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
